@@ -1,47 +1,318 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface qz {
-   static void a(qo<ehp> $$0) {
-      iy<ehj> $$1 = $$0.a(lf.aJ);
-      iy<dbw> $$2 = $$0.a(lf.az);
-      ix.c<ehp> $$3 = $$0.a(
-         ehc.a,
-         new ehp(
-            List.of(ehp.a($$1.b(ehd.t)), ehp.a($$1.b(ehd.u)), ehp.a($$1.b(ehd.v)), ehp.a($$1.b(ehd.w)), ehp.a($$1.b(ehd.x))), new eie(34, 8, eif.a, 10387312)
-         )
-      );
-      $$0.a(ehc.b, new ehp($$1.b(ehd.f), new eie(32, 8, eif.a, 14357617)));
-      $$0.a(ehc.c, new ehp($$1.b(ehd.g), new eie(32, 8, eif.a, 14357618)));
-      $$0.a(ehc.d, new ehp($$1.b(ehd.e), new eie(32, 8, eif.a, 14357619)));
-      $$0.a(ehc.e, new ehp($$1.b(ehd.j), new eie(32, 8, eif.a, 14357620)));
-      $$0.a(ehc.f, new ehp($$1.b(ehd.a), new eie(js.g, eig.c.b, 0.2F, 165745296, Optional.of(new eig.a($$3, 10)), 32, 8, eif.a)));
-      $$0.a(ehc.q, new ehp($$1.b(ehd.F), new eie(24, 8, eif.a, 20083232)));
-      $$0.a(ehc.g, new ehp($$1.b(ehd.l), new eie(32, 5, eif.b, 10387313)));
-      $$0.a(ehc.h, new ehp($$1.b(ehd.d), new eie(80, 20, eif.b, 10387319)));
-      $$0.a(ehc.i, new ehp($$1.b(ehd.r), new eie(new js(9, 0, 9), eig.c.c, 0.01F, 0, Optional.empty(), 1, 0, eif.a)));
-      $$0.a(ehc.j, new ehp(List.of(ehp.a($$1.b(ehd.b)), ehp.a($$1.b(ehd.c))), new eie(js.g, eig.c.d, 0.004F, 0, Optional.empty(), 1, 0, eif.a)));
+public class qz {
+   public static final aks<elc> a = ra.a("village/plains/town_centers");
+   private static final aks<elc> b = ra.a("village/plains/terminators");
+
+   public static void a(qq<elc> $$0) {
+      jb<eix> $$1 = $$0.a(li.aI);
+      ja<eix> $$2 = $$1.b(ss.g);
+      ja<eix> $$3 = $$1.b(ss.m);
+      ja<eix> $$4 = $$1.b(ss.a);
+      jb<enr> $$5 = $$0.a(li.aK);
+      ja<enr> $$6 = $$5.b(rc.g);
+      ja<enr> $$7 = $$5.b(rc.h);
+      ja<enr> $$8 = $$5.b(rc.i);
+      ja<enr> $$9 = $$5.b(rc.a);
+      ja<enr> $$10 = $$5.b(rc.j);
+      ja<enr> $$11 = $$5.b(rc.q);
+      jb<elc> $$12 = $$0.a(li.aM);
+      ja<elc> $$13 = $$12.b(ra.a);
+      ja<elc> $$14 = $$12.b(b);
       $$0.a(
-         ehc.k,
-         new ehp(
-            List.of(
-               ehp.a($$1.b(ehd.y)),
-               ehp.a($$1.b(ehd.z)),
-               ehp.a($$1.b(ehd.A)),
-               ehp.a($$1.b(ehd.B)),
-               ehp.a($$1.b(ehd.C)),
-               ehp.a($$1.b(ehd.D)),
-               ehp.a($$1.b(ehd.E))
+         a,
+         new elc(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ela.a("village/plains/town_centers/plains_fountain_01", $$7), 50),
+               Pair.of(ela.a("village/plains/town_centers/plains_meeting_point_1", $$7), 50),
+               Pair.of(ela.a("village/plains/town_centers/plains_meeting_point_2"), 50),
+               Pair.of(ela.a("village/plains/town_centers/plains_meeting_point_3", $$8), 50),
+               Pair.of(ela.a("village/plains/zombie/town_centers/plains_fountain_01", $$9), 1),
+               Pair.of(ela.a("village/plains/zombie/town_centers/plains_meeting_point_1", $$9), 1),
+               Pair.of(ela.a("village/plains/zombie/town_centers/plains_meeting_point_2", $$9), 1),
+               Pair.of(ela.a("village/plains/zombie/town_centers/plains_meeting_point_3", $$9), 1)
             ),
-            new eie(40, 15, eif.a, 34222645)
+            elc.a.b
          )
       );
-      $$0.a(ehc.l, new ehp(List.of(ehp.a($$1.b(ehd.h)), ehp.a($$1.b(ehd.i))), new eie(24, 4, eif.a, 165745295)));
-      $$0.a(ehc.m, new ehp(List.of(ehp.a($$1.b(ehd.m)), ehp.a($$1.b(ehd.n))), new eie(20, 8, eif.a, 14357621)));
-      $$0.a(ehc.n, new ehp(List.of(ehp.a($$1.b(ehd.o), 2), ehp.a($$1.b(ehd.s), 3)), new eie(27, 4, eif.a, 30084232)));
-      $$0.a(ehc.o, new ehp($$1.b(ehd.p), new eie(2, 1, eif.a, 14357921)));
-      $$0.a(ehc.p, new ehp($$1.b(ehd.q), new eie(20, 11, eif.b, 10387313)));
-      $$0.a(ehc.r, new ehp($$1.b(ehd.k), new eid(32, 3, 128, $$2.b(avv.o))));
-      $$0.a(ehc.s, new ehp($$1.b(ehd.G), new eie(34, 8, eif.a, 83469867)));
+      ra.a(
+         $$0,
+         "village/plains/streets",
+         new elc(
+            $$14,
+            ImmutableList.of(
+               Pair.of(ela.a("village/plains/streets/corner_01", $$10), 2),
+               Pair.of(ela.a("village/plains/streets/corner_02", $$10), 2),
+               Pair.of(ela.a("village/plains/streets/corner_03", $$10), 2),
+               Pair.of(ela.a("village/plains/streets/straight_01", $$10), 4),
+               Pair.of(ela.a("village/plains/streets/straight_02", $$10), 4),
+               Pair.of(ela.a("village/plains/streets/straight_03", $$10), 7),
+               Pair.of(ela.a("village/plains/streets/straight_04", $$10), 7),
+               Pair.of(ela.a("village/plains/streets/straight_05", $$10), 3),
+               Pair.of(ela.a("village/plains/streets/straight_06", $$10), 4),
+               Pair.of(ela.a("village/plains/streets/crossroad_01", $$10), 2),
+               Pair.of(ela.a("village/plains/streets/crossroad_02", $$10), 1),
+               Pair.of(ela.a("village/plains/streets/crossroad_03", $$10), 2),
+               new Pair[]{
+                  Pair.of(ela.a("village/plains/streets/crossroad_04", $$10), 2),
+                  Pair.of(ela.a("village/plains/streets/crossroad_05", $$10), 2),
+                  Pair.of(ela.a("village/plains/streets/crossroad_06", $$10), 2),
+                  Pair.of(ela.a("village/plains/streets/turn_01", $$10), 3)
+               }
+            ),
+            elc.a.a
+         )
+      );
+      ra.a(
+         $$0,
+         "village/plains/zombie/streets",
+         new elc(
+            $$14,
+            ImmutableList.of(
+               Pair.of(ela.a("village/plains/zombie/streets/corner_01", $$10), 2),
+               Pair.of(ela.a("village/plains/zombie/streets/corner_02", $$10), 2),
+               Pair.of(ela.a("village/plains/zombie/streets/corner_03", $$10), 2),
+               Pair.of(ela.a("village/plains/zombie/streets/straight_01", $$10), 4),
+               Pair.of(ela.a("village/plains/zombie/streets/straight_02", $$10), 4),
+               Pair.of(ela.a("village/plains/zombie/streets/straight_03", $$10), 7),
+               Pair.of(ela.a("village/plains/zombie/streets/straight_04", $$10), 7),
+               Pair.of(ela.a("village/plains/zombie/streets/straight_05", $$10), 3),
+               Pair.of(ela.a("village/plains/zombie/streets/straight_06", $$10), 4),
+               Pair.of(ela.a("village/plains/zombie/streets/crossroad_01", $$10), 2),
+               Pair.of(ela.a("village/plains/zombie/streets/crossroad_02", $$10), 1),
+               Pair.of(ela.a("village/plains/zombie/streets/crossroad_03", $$10), 2),
+               new Pair[]{
+                  Pair.of(ela.a("village/plains/zombie/streets/crossroad_04", $$10), 2),
+                  Pair.of(ela.a("village/plains/zombie/streets/crossroad_05", $$10), 2),
+                  Pair.of(ela.a("village/plains/zombie/streets/crossroad_06", $$10), 2),
+                  Pair.of(ela.a("village/plains/zombie/streets/turn_01", $$10), 3)
+               }
+            ),
+            elc.a.a
+         )
+      );
+      ra.a(
+         $$0,
+         "village/plains/houses",
+         new elc(
+            $$14,
+            ImmutableList.of(
+               Pair.of(ela.a("village/plains/houses/plains_small_house_1", $$6), 2),
+               Pair.of(ela.a("village/plains/houses/plains_small_house_2", $$6), 2),
+               Pair.of(ela.a("village/plains/houses/plains_small_house_3", $$6), 2),
+               Pair.of(ela.a("village/plains/houses/plains_small_house_4", $$6), 2),
+               Pair.of(ela.a("village/plains/houses/plains_small_house_5", $$6), 2),
+               Pair.of(ela.a("village/plains/houses/plains_small_house_6", $$6), 1),
+               Pair.of(ela.a("village/plains/houses/plains_small_house_7", $$6), 2),
+               Pair.of(ela.a("village/plains/houses/plains_small_house_8", $$6), 3),
+               Pair.of(ela.a("village/plains/houses/plains_medium_house_1", $$6), 2),
+               Pair.of(ela.a("village/plains/houses/plains_medium_house_2", $$6), 2),
+               Pair.of(ela.a("village/plains/houses/plains_big_house_1", $$6), 2),
+               Pair.of(ela.a("village/plains/houses/plains_butcher_shop_1", $$6), 2),
+               new Pair[]{
+                  Pair.of(ela.a("village/plains/houses/plains_butcher_shop_2", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_tool_smith_1", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_fletcher_house_1", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_shepherds_house_1"), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_armorer_house_1", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_fisher_cottage_1", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_tannery_1", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_cartographer_1", $$6), 1),
+                  Pair.of(ela.a("village/plains/houses/plains_library_1", $$6), 5),
+                  Pair.of(ela.a("village/plains/houses/plains_library_2", $$6), 1),
+                  Pair.of(ela.a("village/plains/houses/plains_masons_house_1", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_weaponsmith_1", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_temple_3", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_temple_4", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_stable_1", $$6), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_stable_2"), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_large_farm_1", $$11), 4),
+                  Pair.of(ela.a("village/plains/houses/plains_small_farm_1", $$11), 4),
+                  Pair.of(ela.a("village/plains/houses/plains_animal_pen_1"), 1),
+                  Pair.of(ela.a("village/plains/houses/plains_animal_pen_2"), 1),
+                  Pair.of(ela.a("village/plains/houses/plains_animal_pen_3"), 5),
+                  Pair.of(ela.a("village/plains/houses/plains_accessory_1"), 1),
+                  Pair.of(ela.a("village/plains/houses/plains_meeting_point_4", $$8), 3),
+                  Pair.of(ela.a("village/plains/houses/plains_meeting_point_5"), 1),
+                  Pair.of(ela.g(), 10)
+               }
+            ),
+            elc.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/plains/zombie/houses",
+         new elc(
+            $$14,
+            ImmutableList.of(
+               Pair.of(ela.a("village/plains/zombie/houses/plains_small_house_1", $$9), 2),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_small_house_2", $$9), 2),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_small_house_3", $$9), 2),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_small_house_4", $$9), 2),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_small_house_5", $$9), 2),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_small_house_6", $$9), 1),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_small_house_7", $$9), 2),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_small_house_8", $$9), 2),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_medium_house_1", $$9), 2),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_medium_house_2", $$9), 2),
+               Pair.of(ela.a("village/plains/zombie/houses/plains_big_house_1", $$9), 2),
+               Pair.of(ela.a("village/plains/houses/plains_butcher_shop_1", $$9), 2),
+               new Pair[]{
+                  Pair.of(ela.a("village/plains/zombie/houses/plains_butcher_shop_2", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_tool_smith_1", $$9), 2),
+                  Pair.of(ela.a("village/plains/zombie/houses/plains_fletcher_house_1", $$9), 2),
+                  Pair.of(ela.a("village/plains/zombie/houses/plains_shepherds_house_1", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_armorer_house_1", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_fisher_cottage_1", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_tannery_1", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_cartographer_1", $$9), 1),
+                  Pair.of(ela.a("village/plains/houses/plains_library_1", $$9), 3),
+                  Pair.of(ela.a("village/plains/houses/plains_library_2", $$9), 1),
+                  Pair.of(ela.a("village/plains/houses/plains_masons_house_1", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_weaponsmith_1", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_temple_3", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_temple_4", $$9), 2),
+                  Pair.of(ela.a("village/plains/zombie/houses/plains_stable_1", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_stable_2", $$9), 2),
+                  Pair.of(ela.a("village/plains/houses/plains_large_farm_1", $$9), 4),
+                  Pair.of(ela.a("village/plains/houses/plains_small_farm_1", $$9), 4),
+                  Pair.of(ela.a("village/plains/houses/plains_animal_pen_1", $$9), 1),
+                  Pair.of(ela.a("village/plains/houses/plains_animal_pen_2", $$9), 1),
+                  Pair.of(ela.a("village/plains/zombie/houses/plains_animal_pen_3", $$9), 5),
+                  Pair.of(ela.a("village/plains/zombie/houses/plains_meeting_point_4", $$9), 3),
+                  Pair.of(ela.a("village/plains/zombie/houses/plains_meeting_point_5", $$9), 1),
+                  Pair.of(ela.g(), 10)
+               }
+            ),
+            elc.a.b
+         )
+      );
+      $$0.a(
+         b,
+         new elc(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ela.a("village/plains/terminators/terminator_01", $$10), 1),
+               Pair.of(ela.a("village/plains/terminators/terminator_02", $$10), 1),
+               Pair.of(ela.a("village/plains/terminators/terminator_03", $$10), 1),
+               Pair.of(ela.a("village/plains/terminators/terminator_04", $$10), 1)
+            ),
+            elc.a.a
+         )
+      );
+      ra.a($$0, "village/plains/trees", new elc($$13, ImmutableList.of(Pair.of(ela.a($$2), 1)), elc.a.b));
+      ra.a(
+         $$0,
+         "village/plains/decor",
+         new elc(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ela.a("village/plains/plains_lamp_1"), 2), Pair.of(ela.a($$2), 1), Pair.of(ela.a($$3), 1), Pair.of(ela.a($$4), 1), Pair.of(ela.g(), 2)
+            ),
+            elc.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/plains/zombie/decor",
+         new elc(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ela.a("village/plains/plains_lamp_1", $$9), 1),
+               Pair.of(ela.a($$2), 1),
+               Pair.of(ela.a($$3), 1),
+               Pair.of(ela.a($$4), 1),
+               Pair.of(ela.g(), 2)
+            ),
+            elc.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/plains/villagers",
+         new elc(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ela.a("village/plains/villagers/nitwit"), 1),
+               Pair.of(ela.a("village/plains/villagers/baby"), 1),
+               Pair.of(ela.a("village/plains/villagers/unemployed"), 10)
+            ),
+            elc.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/plains/zombie/villagers",
+         new elc(
+            $$13,
+            ImmutableList.of(Pair.of(ela.a("village/plains/zombie/villagers/nitwit"), 1), Pair.of(ela.a("village/plains/zombie/villagers/unemployed"), 10)),
+            elc.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/common/animals",
+         new elc(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ela.a("village/common/animals/cows_1"), 7),
+               Pair.of(ela.a("village/common/animals/pigs_1"), 7),
+               Pair.of(ela.a("village/common/animals/horses_1"), 1),
+               Pair.of(ela.a("village/common/animals/horses_2"), 1),
+               Pair.of(ela.a("village/common/animals/horses_3"), 1),
+               Pair.of(ela.a("village/common/animals/horses_4"), 1),
+               Pair.of(ela.a("village/common/animals/horses_5"), 1),
+               Pair.of(ela.a("village/common/animals/sheep_1"), 1),
+               Pair.of(ela.a("village/common/animals/sheep_2"), 1),
+               Pair.of(ela.g(), 5)
+            ),
+            elc.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/common/sheep",
+         new elc($$13, ImmutableList.of(Pair.of(ela.a("village/common/animals/sheep_1"), 1), Pair.of(ela.a("village/common/animals/sheep_2"), 1)), elc.a.b)
+      );
+      ra.a(
+         $$0,
+         "village/common/cats",
+         new elc(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ela.a("village/common/animals/cat_black"), 1),
+               Pair.of(ela.a("village/common/animals/cat_british"), 1),
+               Pair.of(ela.a("village/common/animals/cat_calico"), 1),
+               Pair.of(ela.a("village/common/animals/cat_persian"), 1),
+               Pair.of(ela.a("village/common/animals/cat_ragdoll"), 1),
+               Pair.of(ela.a("village/common/animals/cat_red"), 1),
+               Pair.of(ela.a("village/common/animals/cat_siamese"), 1),
+               Pair.of(ela.a("village/common/animals/cat_tabby"), 1),
+               Pair.of(ela.a("village/common/animals/cat_white"), 1),
+               Pair.of(ela.a("village/common/animals/cat_jellie"), 1),
+               Pair.of(ela.g(), 3)
+            ),
+            elc.a.b
+         )
+      );
+      ra.a(
+         $$0,
+         "village/common/butcher_animals",
+         new elc(
+            $$13,
+            ImmutableList.of(
+               Pair.of(ela.a("village/common/animals/cows_1"), 3),
+               Pair.of(ela.a("village/common/animals/pigs_1"), 3),
+               Pair.of(ela.a("village/common/animals/sheep_1"), 1),
+               Pair.of(ela.a("village/common/animals/sheep_2"), 1)
+            ),
+            elc.a.b
+         )
+      );
+      ra.a($$0, "village/common/iron_golem", new elc($$13, ImmutableList.of(Pair.of(ela.a("village/common/iron_golem"), 1)), elc.a.b));
+      ra.a($$0, "village/common/well_bottoms", new elc($$13, ImmutableList.of(Pair.of(ela.a("village/common/well_bottom"), 1)), elc.a.b));
    }
 }
